--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@
 
 body {
     background: var(--background-color);
+    font-family: var(--heading-font-family);
 }
 
 
@@ -15,21 +16,51 @@ h1 {
 }
 h1, h2 {
     color: white;
-    font-family: var(--heading-font-family);
     text-align: center;
     padding: 15px;
 }
 
+h3 {
+    font-size: 36px;
+    padding: 15px;
+}
+
+p {
+    font-size: 20px;
+    padding: 15px;
+}
+
+
 .hero {
     background: var(--branding-color);
-    padding: 50px;
+    padding: 50px 20px;
     text-align: center;
 }
 
 .btn-branding {
     background: white;
     text-align: center;
-    font-family: var(--heading-font-family);
     border-radius: 4px;
+    border-color: gray;
 
 }
+
+.btn-branding-outline {
+    background: white;
+    text-align: center;
+    border-radius: 4px;
+    border-color: gray;
+    margin: 15px;
+}
+
+.project-description {
+    padding: 20px;
+}
+
+@media (max-width: 960px) {
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
+}
+
