--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,6 +64,16 @@ p {
     }
 }
 
+.about-section {
+    text-align: center;
+    padding: 0;
+}
+
 .logo {
     max-width: 250px;
+}
+
+.img-fluid {
+    max-width: 300px;
+
 }
