--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,7 +33,7 @@ p {
 
 .hero {
     background: var(--branding-color);
-    padding: 50px 20px;
+    padding: 50px;
     text-align: center;
 }
 
@@ -64,7 +64,7 @@ p {
     }
 }
 
-.about-section {
+.content-container{
     text-align: center;
     padding: 0;
 }
