--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -78,3 +78,10 @@ p {
     text-align: center;
 
 }
+
+.contact-container {
+    font-size: 23px;
+    color: black;
+    padding: 20px;
+    text-align: center;
+}
