--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -73,10 +73,41 @@ p {
     max-width: 250px;
 }
 
+.logo-header {
+    max-width: 65px;
+    margin: 5px;
+
+}
+
+nav {
+    padding: 4px;
+}
+
+nav li {
+    display: inline;
+    list-style: none;
+    margin-left: 20px;
+    line-height: 42px;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    transition: all 100ms ease-in-out;
+}
+
+nav a:hover, nav li.active a {
+    color: var(--branding-color);
+}
+
 .img-fluid {
     max-width: 300px;
     text-align: center;
 
+}
+
+nav ul {
+    padding: 0;
 }
 
 .contact-container {
