--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,11 +25,44 @@ h3 {
     padding: 15px;
 }
 
+h5 {
+    font-size: 38px;
+}
+
 p {
     font-size: 20px;
     padding: 15px;
 }
 
+footer {
+    margin: 60px 0;
+}
+
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+footer .email-link:hover {
+    color: var(--branding-color);
+}
+
+footer .contact-box {
+    background-color: var(--branding-color);
+    padding: 30px 150px;
+}
+
+footer .contact-box p {
+    margin: 0;
+}
+
+footer .social-links a {
+    margin: 0 7px 7px;
+    color: var(--branding-color);
+    background: var(--background-color);
+}
 
 .hero {
     background: var(--branding-color);
